creando cards con jquery

--- a/style.scss
+++ b/style.scss
@@ -1,24 +1,21 @@
-.card{
-  background-color: #80808042;
-}
-.car-carrito{
-  padding-top: 10%;
-  padding-bottom: 40%;
+
+
+
+
+
+.bg-cards{
+  background-color: #f0ffff00;
+
 }
 
 .body_bgColor{
-    background-image: url(./assets/coverBlanqueria.jpg);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    height: auto;
-    
-       
+  background-image: url(./assets/coverBlanqueria.jpg);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: auto;
 }
 
-.form-indx{
-  justify-content: center;
-}
 
 /*
  * Globals
