--- a/style.css
+++ b/style.css
@@ -1,10 +1,5 @@
-.card {
-  background-color: #80808042;
-}
-
-.car-carrito {
-  padding-top: 10%;
-  padding-bottom: 40%;
+.bg-cards {
+  background-color: #f0ffff00;
 }
 
 .body_bgColor {
@@ -13,12 +8,6 @@
   background-position: center;
   background-attachment: fixed;
   height: auto;
-}
-
-.form-indx {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 /*
