--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
-.bg-cards {
-  background-color: #f0ffff00;
+.card {
+  background-color: #80808042;
+}
+
+.car-carrito {
+  padding-top: 10%;
+  padding-bottom: 40%;
 }
 
 .body_bgColor {
@@ -8,6 +13,12 @@
   background-position: center;
   background-attachment: fixed;
   height: auto;
+}
+
+.form-indx {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 /*
