--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ body {
   color: rgba(255, 255, 255, 0.5);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
+  ;
 }
 
 .nav-masthead .nav-link:hover,
