--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .card {
   background-color: #80808042;
+  margin: 1%;
 }
 
 .car-carrito {
@@ -82,7 +83,6 @@ body {
   color: rgba(255, 255, 255, 0.5);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
-  ;
 }
 
 .nav-masthead .nav-link:hover,
